--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
     "axios": "^0.17.1",
     "express": "^4.16.4",
+    "material-ui": "^0.20.2",
     "pg": "^7.4.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
