--- a/package.json
+++ b/package.json
@@ -5,17 +5,23 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "@sweetalert/with-react": "^0.1.1",
     "axios": "^0.17.1",
+    "bootstrap": "^4.3.1",
     "express": "^4.16.4",
     "material-ui": "^0.20.2",
+    "mui-datatables": "^2.0.0-beta.59",
     "pg": "^7.4.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^2.1.3",
+    "react-virtualized": "^9.21.0",
     "redux": "^4.0.1",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^8.8.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.5"
